--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <activity android:name=".DepartmentList"></activity>
+        <activity android:name=".DepartmentDelete"></activity>
+        <activity android:name=".DepartmentModify" />
+        <activity android:name=".DepartmentList" />
         <activity android:name=".DepartmentMenu" />
         <activity android:name=".PositionDelete" />
         <activity android:name=".PositionModify" />
