--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <activity android:name=".DepartmentDelete"></activity>
+        <activity android:name=".CarEdit"></activity>
+        <activity android:name=".CarBrandHandle" />
+        <activity android:name=".CarHandle" />
+        <activity android:name=".CarMenu" />
+        <activity android:name=".DepartmentDelete" />
         <activity android:name=".DepartmentModify" />
         <activity android:name=".DepartmentList" />
         <activity android:name=".DepartmentMenu" />
