--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <activity android:name=".EmployeeHandle"></activity>
+        <activity android:name=".EmployeeList"></activity>
+        <activity android:name=".EmployeeEdit" />
+        <activity android:name=".EmployeeHandle" />
         <activity android:name=".LaptopBrandList" />
         <activity android:name=".LaptopBrandEdit" />
         <activity android:name=".LaptopBrandHandle" />
