--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.gergo.companyx">
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -8,8 +14,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <activity android:name=".EmployeeList"></activity>
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".QRRead"></activity>
+        <activity android:name=".QRCreation" />
+        <activity android:name=".FacLaptopList" />
+        <activity android:name=".FacMobileList" />
+        <activity android:name=".FacCarList" />
+        <activity android:name=".FacLaptopEdit" />
+        <activity android:name=".FacLaptopHandle" />
+        <activity android:name=".FacMobileEdit" />
+        <activity android:name=".FacMobileHandle" />
+        <activity android:name=".FacCarEdit" />
+        <activity android:name=".FacCarHandle" />
+        <activity android:name=".EmployeeList" />
         <activity android:name=".EmployeeEdit" />
         <activity android:name=".EmployeeHandle" />
         <activity android:name=".LaptopBrandList" />
@@ -83,6 +101,9 @@
         <activity
             android:name=".PositionMenu"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+
+        <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode"/>
+
     </application>
 
 </manifest>
