--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -19,7 +22,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".EmployeeCarMenu"></activity>
+        <activity android:name=".EmployeeLaptop"></activity>
+        <activity android:name=".EmployeeMobile" />
+        <activity android:name=".EmployeeTripList" />
+        <activity android:name=".EmployeeTrip" />
+        <activity android:name=".EmployeeCarMenu" />
         <activity android:name=".QRRead" />
         <activity android:name=".QRCreation" />
         <activity android:name=".FacLaptopList" />
